crates/errmeta_derive/tests/fails/missing_struct_error_meta.rs
#[derive(Debug, errmeta_derive::ErrorMeta)]
pub struct TestStruct {
  msg: String,
}

fn main() {}
